--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -10,13 +10,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 30%;
-  width: 40%;
+  max-height: 70%;
+  min-width: 40%;
+  max-width: 60%;
 }
 
 .field {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .field label {
@@ -72,4 +73,49 @@
 
 .field-btn a:hover {
   color: #414345;
+}
+
+@media (max-width: 1000px) {
+  .login-form {
+      height: 50%;
+      max-height: 100%;
+      width: 90%;
+      max-width: 100%;
+    }
+  
+}
+
+@media (max-width: 600px){
+  .login-form {
+      height: 50%;
+      max-height: 100%;
+      width: 90%;
+      max-width: 100%;
+    }
+  
+    .field label,
+    .field-btn {
+      font-size: 1.2rem;
+    }
+  
+    .field input,
+    .field-btn a {
+      font-size: 1rem;
+    }
+}
+
+@media (max-width: 320px) {
+  .login-form {
+    height: 50%;
+    max-height: 100%;
+    width: 90%;
+    max-width: 100%;
+  }
+  .field label, .field-btn button{
+    font-size: 1.2rem;
+  }
+  .field input, .field-btn a{
+    font-size: 1rem;
+  }
+  
 }
