--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -1,10 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;700&display=swap');
 html{
     box-sizing: border-box;
+    background-color: #fff;
+    overflow-y: hidden;
 }
 *,*::after,*::before{
     box-sizing: inherit;
 }
 *{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+
+main{
+    padding-top: 10vh;
 }
