--- a/frontend/src/styles/app.css
+++ b/frontend/src/styles/app.css
@@ -14,6 +14,13 @@ html{
 }
 
 
-main{
+.main{
     padding-top: 10vh;
+}
+
+.container {
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
