--- a/frontend/src/pages/styles/home.css
+++ b/frontend/src/pages/styles/home.css
@@ -5,7 +5,6 @@
 }
 
 .api-text{
-    border: 1px solid black;
     width: 50%;
     height: 10%;
     display: flex;
@@ -39,14 +38,11 @@
     height: 60%;
     background-color: #232526;
     color: #fff;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+    overflow-y: scroll;
+    border-radius: 10px;
 }
 
-.user-container span{
-    border: 1px solid red;
+.user-container h2{
     width: 100%;
     height: 10%;
     display: flex;
@@ -54,10 +50,34 @@
     align-items: center;
 }
 
+.user-data-container{
+    width: 100%;
+    max-height: auto;
+    padding: 4% 4%;
+    font-family: 'Fira Code', monospace;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .user-data{
     width: 100%;
-    height: 90%;
-    border: 1px solid red;
-    padding: 0 4%;
-    font-family: 'Fira Code', monospace;
+    height: 150px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    margin-bottom: 2%;
+    border-bottom: .5px dashed #fff;
+}
+
+.user-data p:nth-child(1){
+    color: #fff;
+}
+
+.user-data p{
+    color: #8de02b
+}
+
+.user-data p > span{
+    color: #f0c42c;
 }
