--- a/frontend/src/styles/home.css
+++ b/frontend/src/styles/home.css
@@ -43,7 +43,10 @@
 }
 
 .user-container h2{
-    width: 100%;
+    position: fixed;
+    background-color: #232526;
+    border-radius: 10px 10px 0 0;
+    width: 50%;
     height: 10%;
     display: flex;
     justify-content: center;
@@ -53,7 +56,7 @@
 .user-data-container{
     width: 100%;
     max-height: auto;
-    padding: 4% 4%;
+    padding: 14% 4%;
     font-family: 'Fira Code', monospace;
     display: flex;
     flex-direction: column;
