--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -65,6 +65,7 @@ header ul li a {
     align-items: center;
     width: 100%;
     height: 80%;
+    margin-top: 10%;
 }
 
 .api-text {
@@ -102,28 +103,29 @@ header ul li a {
     background-color: #232526;
     color: #fff;
     border-radius: 10px;
+    overflow-y: scroll;
 }
 
 .user-container h2 {
-    position: fixed;
+    text-align: center;
     background-color: #232526;
     border-radius: 10px 10px 0 0;
-    width: 50%;
+    width: 100%;
     height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 2% 2%;
 }
 
 .user-data-container {
     width: 100%;
     height: 100%;
-    padding: 14% 4%;
+    padding: 4% 4%;
     font-family: 'Fira Code', monospace;
     display: flex;
     flex-direction: column;
     align-items: center;
-    overflow-y: scroll;
 }
 
 .user-data {
@@ -155,6 +157,7 @@ header ul li a {
     max-height: 70%;
     min-width: 40%;
     max-width: 60%;
+    margin-top: 5%;
 }
 
 .field {
