--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -244,6 +244,10 @@ header ul li a {
     width: 50%;
 }
 
+.modalOpen{
+    display: none;
+}
+
 .header-minha-conta {
     text-align: center;
     height: 15%;
