--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -13,11 +13,8 @@ html{
     padding: 0;
 }
 
-.main{
-    padding-top: 10vh;
-}
-
 .container {
+    padding-top: 10vh;
     height: 100vh;
     width: 100%;
     display: flex;
@@ -278,9 +275,13 @@ header ul li a {
 }
 
 .actions button {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     border: none;
-    width: 15%;
-    font-size: 0.8rem;
+    min-width: 15%;
+    width: 20%;
+    font-size: 1rem;
     border-radius: 10px;
     background-image: linear-gradient(to right, #232526 0%, #414345 51%, #232526 100%);
     padding: 15px 15px;
@@ -291,7 +292,6 @@ header ul li a {
     background-size: 200% auto;
     color: white;
     box-shadow: 0 0 20px #eee;
-    display: block;
     cursor: pointer;
 }
 
@@ -308,6 +308,71 @@ header ul li a {
     color: #fff;
     text-decoration: none;
 }
+/*! MODAL */
+.modal{
+    height: 80%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.header-modal{
+    height: 15%;
+    border-bottom: .5px solid black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 3%;
+    font-size: 1.4rem;
+}
+
+.header-modal span {
+    cursor: pointer;
+}
+
+.body-modal{
+    margin-top: 1%;
+    align-items: center;
+    height: 85%;
+    padding: 0 3%;
+}
+
+.body-modal span{
+    font-size: 1.2rem;
+}
+
+.edit-info{
+    margin-top: 2%;
+    height: 60%;
+}
+
+.edit-info label{
+    display: block;
+    font-size: 1rem;
+    margin-bottom: 1%;
+}
+.edit-info input {
+    width: 60%;
+    font-size: 1rem;
+    margin-bottom: 2%;
+    padding: 2%;
+    border-radius: 10px;
+    border: 0.5px solid #232526;
+    background-color: #e0e0e065;
+}
+
+.modalBtn{
+    margin-top: 2%;
+    align-items: center;
+    justify-content: flex-start;
+    height: 10%;
+}
+
+.modalBtn button{
+    display: block;
+}
+
 /*! SOBRE */
 
 /*! RESPONS */
