--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -23,6 +23,15 @@ html{
     flex-direction: column;
 }
 
+.page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 80%;
+}
+
 /*! HEADER */
 header {
     background-color: none;
@@ -47,7 +56,7 @@ header a {
     color: #232526;
 }
 
-header ul {
+header nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -56,34 +65,39 @@ header ul {
     list-style: none;
 }
 
-header ul li{
+header nav a {
+    transition: .2s;
+}
+
+header nav a:hover {
+    padding: 0.4% 1%;
+    background-color: #232526;
+    opacity: 1;
+    color: #fff;
     border-radius: 10px;
-    cursor: pointer;
 }
 
-header ul li a {
-    text-decoration: none;
-    color: #232526;
-    transition: .4s;
+header nav a:last-child {
+    padding: 0.4% 1%;
+    border: 1px solid #232526;
+    border-radius: 10px;
 }
 
-header ul li:nth-child(1){
-    color: red;
+.selected{
+    padding: 0.4% 1%;
+    background-color: #232526;
+    opacity: 1;
+    color: #fff;
+    border-radius: 10px;
 }
 
-header ul li:not(:hover) {
+.not-selected{
     opacity: 0.5;
 }
 
+
+
 /*! HOME */
-.home {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    height: 80%;
-    margin-top: 10%;
-}
 
 .api-text {
     width: 50%;
@@ -182,24 +196,35 @@ header ul li:not(:hover) {
 }
 
 /*! LOGIN */
+.container-form{
+    width: 40%;
+    height: 100%;
+    display: flex;
+}
 .login-form {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    max-height: 70%;
-    min-width: 40%;
-    max-width: 60%;
-    margin-top: 5%;
-}
-
-.field {
     width: 100%;
     height: 100%;
 }
 
+.teste{
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.field {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
 .field label {
     display: block;
-    margin-bottom: 3%;
     font-size: 1.6rem;
     color: #232526;
 }
@@ -207,8 +232,7 @@ header ul li:not(:hover) {
 .field input {
     width: 100%;
     font-size: 1.4rem;
-    margin-bottom: 4%;
-    padding: 4%;
+    padding: 2%;
     border-radius: 10px;
     border: 0.5px solid #232526;
     background-color: #e0e0e065;
@@ -216,6 +240,7 @@ header ul li:not(:hover) {
 
 .field-btn {
     width: 100%;
+    height: 20%;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -225,7 +250,7 @@ header ul li:not(:hover) {
     border: none;
     width: 100%;
     font-size: 1.4rem;
-    margin-bottom: 4%;
+    margin-bottom: 1%;
     border-radius: 10px;
     background-image: linear-gradient(to right, #232526 0%, #414345 51%, #232526 100%);
     padding: 15px 45px;
@@ -264,19 +289,30 @@ header ul li:not(:hover) {
 
 .alert-error {
     display: block;
-    width: 40%;
-    height: 5%;
+    width: 100%;
+    height: 10%;
+    text-align: center;
     line-height: 46.55px;
-    font-size: 1rem;
+    font-size: 1.2rem;
     color: red;
 }
 /*! MINHA CONTA */
 .minha-conta {
-    height: 40%;
+    height: 60%;
     width: 50%;
 }
 
+.modal-container{
+    border: 1px solid purple;
+    height: 100%;
+    width: 100%;
+}
+
 .modalOpen{
+    display: none;
+}
+
+.modalClose{
     display: none;
 }
 
@@ -291,13 +327,15 @@ header ul li:not(:hover) {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
 }
 
 .info-conta {
-    height: 50%;
+    height: 60%;
+    width: 60%;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-evenly;
+    align-items: center;
     font-size: 1.4rem;
 }
 
@@ -305,7 +343,7 @@ header ul li:not(:hover) {
     height: 40%;
     width: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     align-items: center;
 }
 
@@ -320,7 +358,7 @@ header ul li:not(:hover) {
     border-radius: 10px;
     background-image: linear-gradient(to right, #232526 0%, #414345 51%, #232526 100%);
     padding: 15px 15px;
-    margin-left: 2%;
+    margin-right: 2%;
     text-align: center;
     text-transform: uppercase;
     transition: .4s;
